# K3s-C-

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  vcpkg.json
agent/: agent.cpp  agent.h
curl_http/: curl.cpp  curl.h
daemons/control/: server.cpp
scheduler/: command.h  scheduler.cpp  server.cpp
server/: handler.h  server.cpp  server.h
struct/: agent_Struct.h  server_Struct.h
